1. Метод .of [#395910]