@@ -11,23 +11,23 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenOutOfOrder1() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
@@ -38,7 +38,7 @@ public class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K1/SK2"
         );
-        List<String> expect = Arrays.asList("K2/SK1/SSK2", "K2/SK1/SSK1",
+        List<String> expect = List.of("K2/SK1/SSK2", "K2/SK1/SSK1",
                 "K2/SK1", "K2", "K1/SK2", "K1/SK1/SSK1", "K1/SK1", "K1");
         List<String> result = Departments.sortDesc(input);
         assertThat(result, is(expect));
@@ -46,7 +46,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenOutOfOrder2() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K2",
                 "K2/SK2",
                 "K2/SK2/SSK1",
@@ -59,7 +59,7 @@ public class DepartmentsTest {
                 "K1/SK1/SSK2",
                 "K1/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList("K2/SK2/SSK1", "K2/SK2",
+        List<String> expect = List.of("K2/SK2/SSK1", "K2/SK2",
                 "K2/SK1/SSK2", "K2/SK1/SSK1", "K2/SK1", "K2", "K1/SK2",
                 "K1/SK1/SSK2", "K1/SK1/SSK1", "K1/SK1", "K1");
         List<String> result = Departments.sortDesc(input);
@@ -68,7 +68,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenOutOfOrder3() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K2",
                 "K2/SK2",
                 "K2/SK2/SSK1",
@@ -81,7 +81,7 @@ public class DepartmentsTest {
                 "K1/SK1/SSK2",
                 "K1/SK1/SSK1"
         );
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1",
+        List<String> expect = List.of("K1", "K1/SK1", "K1/SK1/SSK1",
                 "K1/SK1/SSK2", "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2", "K2/SK2", "K2/SK2/SSK1");
 
